Remove unused map routes endpoint from services
